--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "popper.js": "^1.16.1",
     "sass": "^1.26.3",
     "sass-loader": "^8.0.2",
+    "sweetalert": "^2.1.2",
     "vue": "^2.6.11",
     "vue-router": "^3.1.5",
+    "vue-sweetalert2": "^3.0.5",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
